# MiniTectonic

./: .gitignore  Cargo.toml  README.md  checksum_demo.sh  demo.sh  retrieved_file.txt  test_checksum.txt  test_post.txt
src/: checksum.rs  chunk_store.rs  cli.rs  coordinator.rs  error.rs  lib.rs  main.rs  metadata.rs  tenant.rs
storage/chunks/: 4a9f886a-c317-4c82-8e18-40b1cdb92a02.blob  4a9f886a-c317-4c82-8e18-40b1cdb92a02.blob.chk  643a033c-eba3-4c7b-8eab-f100e6ed38cb.blob  643a033c-eba3-4c7b-8eab-f100e6ed38cb.blob.chk
storage/metadata/: db  snap.000000000000032D
storage/tenants/: db
