[package]
name = "mini-tectonic-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simplified, multitenant block storage system inspired by Meta's Tectonic Filesystem"

[dependencies]
# CLI argument parsing
clap = { version = "4.5.1", features = ["derive"] }

# Storage backend
sled = "0.34.7"

# Cryptographic functions
sha2 = "0.10.8"

# Error handling
thiserror = "1.0.57"
anyhow = "1.0.79"

# Async runtime
tokio = { version = "1.36.0", features = ["full"] }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# UUID generation
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Date and time handling with serialization support
chrono = { version = "0.4.41", features = ["serde"] }

# Temporary file handling
tempfile = "3.10.0"

[dev-dependencies]
tokio-test = "0.4.3" 
